Kaufland stock update - DE+EN

--- a/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
@@ -191,6 +191,14 @@ After setting up {market} in plentymarkets, the automatic processes described in
 | Stock synchronisation
 | Hourly
 
+The following fields are exported during stock synchronisation:
+
+*Processing time* +
+*condition* +
+*Additional description of condition* +
+*Kaufland shipping group ID* +
+*Kaufland warehouse ID* +
+
 | Item export
 | once a day +
 *_Note:_* Only items which have been changed within the last 26 hours are exported.
@@ -419,7 +427,7 @@ For further information about linking characteristics with Kaufland.de, refer to
 === _Alternative 2:_ Catalogue export _(recommended)_
 
 Catalogue formats provide you with a long-term and flexible way to export your item data. Item data is exported to Kaufland using a catalogue. +
-Kaufland catalogues are created with the *Kaufland - Creating catalogues* assistant in the *Setup » Assistants » Omni-Channel* menu. 
+Kaufland catalogues are created with the *Kaufland - Creating catalogues* assistant in the *Setup » Assistants » Omni-Channel* menu.
 
 include::partial$catalogue-new-to-text.adoc[]
 
