--- a/docs/en-gb/modules/data/pages/catalogues.adoc
+++ b/docs/en-gb/modules/data/pages/catalogues.adoc
@@ -2,7 +2,7 @@
 :keywords:
 :description: The *Data » Catalogues* menu allows you to configure data exports.
 :id: VP4I6LM
-:page-aliases: manage-catalogues.adoc
+:page-aliases: managing-catalogues.adoc
 :author: team-plenty-channel
 
 Catalogues are used to export data from your plentymarkets system. There are catalogues with marketplace formats and catalogues with standard formats.
