--- a/docs/en-gb/modules/markets/pages/ebay-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/ebay-setup.adoc
@@ -4,6 +4,11 @@
 :id: DWYPTTK
 :author: team-plenty-channel
 
+:ebay:
+:market: ebay
+:listings-sales-planner: 2700
+:listings-edit: 3800
+
 With more than 120 million buyers worldwide, eBay provides an opportunity to sell on a global and growing market. The eBay API interface can be fully integrated with plentymarkets. For example, you can start <<#5100, listings>> and upload <<#6000, variation offers>>, process your <<#7400, returns>> and send <<#7100, dunning letters>>. You will also learn how to <<#10100, exchange data>> between eBay and plentymarkets.
 
 [#100]
@@ -2111,7 +2116,7 @@ Set up xref:automation:event-procedures.adoc#[event procedures] to automatically
 [IMPORTANT]
 .Editing returns in the order type "return" or "credit note"
 ====
-Before you set up event procedures for refunds, decide whether refunds should be edited in the order type *Return* or whether credit notes should be created. If you create credit notes, then select the filter *Order type > Credit notes* for event procedures with refunds. Because edited eBay statuses are imported along with both the credit note and the return, the event procedure would otherwise be triggered twice, i.e. for the return and for the credit note. 
+Before you set up event procedures for refunds, decide whether refunds should be edited in the order type *Return* or whether credit notes should be created. If you create credit notes, then select the filter *Order type > Credit notes* for event procedures with refunds. Because edited eBay statuses are imported along with both the credit note and the return, the event procedure would otherwise be triggered twice, i.e. for the return and for the credit note.
 ====
 
 [#7800]
