--- a/docs/de-de/modules/crm/pages/faq.adoc
+++ b/docs/de-de/modules/crm/pages/faq.adoc
@@ -52,7 +52,13 @@ Die Adressdaten der Person, die als Gast in deinem plentyShop bestellt hat, kön
 [.collapseBox]
 .Wie lösche ich Kontaktdaten DSGVO-konform?
 --
-Text
+Eine Kundin fordert dich auf, ihre Daten bei dir im System zu löschen. Folgendes ist zu tun: 
+
+* Öffne das Menü *CRM » Schnellsuche*.
+* Suche den Datensatz der Kundin und öffne ihn.
+* Klicke 
+
+*_Hinweis:_* Wenn die Schaltfläche *Datensatz anonymisieren* in dem Datensatz, den du löschen möchtest, ausgegraut ist, bedeutet das, dass es sich um eine Gastbestellung handelt. In diesem Fall ist die Schaltfläche deaktiviert, weil der Datensatz kein Kontakt ist. Das Löschen bzw. Unkenntlichmachen, damit kein Bezug mehr zu der Person hergestellt werden, ist _nicht_ nötig. 
 --
 
 [#faq-daten-anonymisieren]
@@ -64,7 +70,7 @@ Text
 
 [#faq-anonymisieren-button-kontakte]
 [.collapseBox]
-.Ich finde den Button zum Anonymisieren nicht. Wo ist er?
+.Ich finde den Button zum Anonymisieren der Kund:innendaten nicht. Wo ist er?
 --
 Text
 --
