--- a/docs/en-gb/modules/glossary/partials/back-end-plugin-set.adoc
+++ b/docs/en-gb/modules/glossary/partials/back-end-plugin-set.adoc
@@ -1,2 +1,2 @@
 [#back-end-plugin-set]
-Back end plugin set:: A <<plugin-set,plugin set>> that’s linked to a user account. The <<plugin,plugins>> that are included in the plugin set can add menus and functions to the <<backend,back end>>. Every user account is always linked to exactly one plugin set.
+Back end plugin set:: A <<plugin-set,plugin set>> that’s linked to a user account. The <<plugin,plugins>> that are included in the plugin set can add menus and functions to the <<#back-end, back end>>. Every user account is always linked to exactly one plugin set.
