--- a/docs/en-gb/modules/glossary/partials/matching.adoc
+++ b/docs/en-gb/modules/glossary/partials/matching.adoc
@@ -1,3 +1,3 @@
 [#matching]
 Matching:: Specifies which data should be used to check whether a data record already exists when importing data. +
-* For further information, refer to the <</data/importing-data/ElasticSync#, Using the import tool>> page.
+* For further information, refer to the xref:data:ElasticSync.adoc#[Using the import tool] page.
