--- a/docs/en-gb/modules/stock-management/pages/box-picking.adoc
+++ b/docs/en-gb/modules/stock-management/pages/box-picking.adoc
@@ -233,7 +233,7 @@ plentymarkets automatically creates a list of all the items that are ready to be
 
 The list includes important information on the items that have to be picked. Warehouse employees do not only see how many copies of an item have to be picked, but are also shown the storage location and name of the item.
 
-Now the warehouse employee takes the trolley and walks over to where the first item is stored. Upon arrival, the warehouse employee scans the barcode of the storage location. Then, the barcode of the first item is scanned. Depending on the setting you have selected for the options xref:stock-management:box-picking.adoc#intable-storage-location-scan[Mandatory scan of storage location] and xref:stock-management:box-picking.adoc#intable-item-scan[Mandatory item scan], you can alternatively tap on storage locations and items in the app to select them manually.
+Now the warehouse employee takes the trolley and walks over to where the first item is stored. Upon arrival, the warehouse employee scans the barcode of the storage location. Then, the barcode of the first item is scanned. Depending on the setting you have selected for the options xref:stock-management:box-picking.adoc#intable-storage-location-scan[Mandatory scan of storage location] and xref:stock-management:box-picking.adoc#intable-itemscan[Mandatory item scan], you can alternatively tap on storage locations and items in the app to select them manually.
 
 [.instruction]
 Working with the item list:
