--- a/docs/en-gb/modules/stock-management/pages/carrying-out-stocktaking.adoc
+++ b/docs/en-gb/modules/stock-management/pages/carrying-out-stocktaking.adoc
@@ -20,7 +20,7 @@ Have you not created labels for storage locations yet? Refer to the xref:stock-m
 [#100]
 == Checking stock
 
-Do you want to check all stock changes at once after completing stocktaking? Then start by using the export format xref:stock-managemen:taking-stock.adoc#200[catalogue format *Stocks*] to export your current stock.
+Do you want to check all stock changes at once after completing stocktaking? Then start by using the export format xref:stock-management:taking-stock.adoc#200[catalogue format *Stocks*] to export your current stock.
 
 After you have finished stocktaking with the plentyWarehouse app, use the xref:stock-management:taking-stock.adoc#400[import tool to create a data import].  Once you have created the import, you can view the stock changes for each item in the *Tab: Stock » Tab: Stock movement* area of the item. In addition, the import will be displayed as a separate entry in the *Stock » Incoming items* menu. Open this entry to view the stock changes.
 
