--- a/docs/de-de/modules/daten/pages/campaigncoupon.adoc
+++ b/docs/de-de/modules/daten/pages/campaigncoupon.adoc
@@ -24,7 +24,7 @@ Tabelle 1 erläutert die Datenfelder des Datenformats *CampaignCoupon* in alphab
 
 | *CouponCode*
 |Gutschein-Code +
-Um weitere xref:auftraege:gutscheine.adoc#5[Gutschein-Codes] zu hinterlegen, diese in diese Spalte eingeben und dazu die ID der Kampagne in der Spalte *CampaignID* eingeben.
+Um weitere xref:auftraege:gutscheine.adoc#gutscheinkampagnen-gutschein-codes-import-export[Gutschein-Codes] zu hinterlegen, diese in diese Spalte eingeben und dazu die ID der Kampagne in der Spalte *CampaignID* eingeben.
 |
 
 | *Export für Kundenklasse*
