--- a/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
@@ -62,9 +62,9 @@ xref:daten:katalog-formate.adoc#[Verfügbare Format-Typen]
 
 Jetzt passt du den Katalog an deine Anforderungen an. Die Informationen in diesem Kapitel sind so aufgebaut:
 
-* <<#140, Formateinstellungen vornehmen>>
-* <<#150, Exporteinstellungen vornehmen>>
-* <<#290, URL für Download generieren>>
+* <<#format-settings, Formateinstellungen vornehmen>>
+* <<#export-settings, Exporteinstellungen vornehmen>>
+* <<#download-settings, URL für Download generieren>>
 
 [#format-settings]
 === Formateinstellungen vornehmen
