--- a/docs/en-gb/modules/data/pages/customerpropertylink.adoc
+++ b/docs/en-gb/modules/data/pages/customerpropertylink.adoc
@@ -5,7 +5,7 @@
 :id: RWENFES
 :author: team-crm
 
-The data format *CustomerPropertyLink* is used to export xref:crm:managing-contacts.adoc#4000[customer properties] and values saved in the customer data. Use this data format to quickly link customer properties with certain customers. Create and export the data format in the *Data » Dynamic export* menu. The xref:data:exporting-data.adoc#[Exporting data] page of the manual describes how you export the data format.
+The data format *CustomerPropertyLink* is used to export xref:crm:preparatory-settings.adoc#properties-introduction[customer properties] and values saved in the customer data. Use this data format to quickly link customer properties with certain customers. Create and export the data format in the *Data » Dynamic export* menu. The xref:data:exporting-data.adoc#[Exporting data] page of the manual describes how you export the data format.
 
 Pay close attention to the exact spelling of the data fields. The data cannot be processed if the data fields are spelled incorrectly.
 
