--- a/docs/en-gb/modules/data/pages/customerproperty.adoc
+++ b/docs/en-gb/modules/data/pages/customerproperty.adoc
@@ -5,7 +5,7 @@
 :id: OLPLJWR
 :author: team-crm
 
-The data format *CustomerProperty* is used to export the customer properties saved in the xref:crm:managing-contacts.adoc#4000[Setup » CRM » Properties] menu. Create and export the data format in the *Data » Dynamic export* menu. The xref:data:exporting-data.adoc#[Exporting data] page of the manual describes how you export the data format.
+The data format *CustomerProperty* is used to export the customer properties saved in the xref:crm:preparatory-settings.adoc#properties-introduction[Setup » CRM » Properties] menu. Create and export the data format in the *Data » Dynamic export* menu. The xref:data:exporting-data.adoc#[Exporting data] page of the manual describes how you export the data format.
 
 Pay close attention to the exact spelling of the data fields. The data cannot be processed if the data fields are spelled incorrectly.
 
