EDIT order types

--- a/docs/de-de/modules/auftraege/pages/new-order-ui-beta.adoc
+++ b/docs/de-de/modules/auftraege/pages/new-order-ui-beta.adoc
@@ -1,5 +1,8 @@
 = Aufträge (beta)
 
+:keywords:
+:author: team-order-core
+
 Die neue Auftrags-UI befindet sich nun in der sogenannten _open beta-Phase_. Somit stellen wir dir das neue Menü unter *Aufträge » Aufträge (Testphase)* nun zum Kennenlernen und Ausprobieren zur Verfügung und werden weiter an der Performance arbeiten und verschiedene Anpassungen vornehmen. Die bisherige Auftrags-UI im Menü unter *Aufträge » Aufträge bearbeiten* steht dir parallel weiterhin zur Verfügung.
 
 [#menu-overview-orders]
