--- a/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
+++ b/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
@@ -1,4 +1,7 @@
-= Working with orders
+= Mit Aufträgen arbeiten
+
+:keywords:
+:author: team-order-core
 
 Aufträge bilden deine Verkäufe sowie damit einhergehende und übliche Geschäftsvorfälle ab. Mithilfe von xref:auftraege:order-types.adoc#[Auftragstypen] werden die unterschiedlichen Geschäftsvorfälle kenntlich gemacht. Fortschritte bei der Bearbeitung eines Auftrags werden durch xref:auftraege:order-statuses.adoc#1200[Auftragsstatus] angezeigt. Welche Möglichkeiten dir Auftragstypen und Auftragsstatus bieten und wie du Aufträge abwickelst, erfährst du in den folgenden Beschreibungen. Alle Aufträge werden zentral und in einem einheitlichen Format erfasst. Bereits in der xref:auftraege:auftraege-verwalten.adoc#1400[Auftragsübersicht] siehst du wichtige Informationen auf einen Blick und kannst einige Arbeiten direkt ausführen.
 
