EDIT order types

--- a/docs/de-de/modules/auftraege/pages/order-type-credit-note.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-type-credit-note.adoc
@@ -2,3 +2,194 @@
 
 :keywords:
 :author: team-order-core
+
+Bei einer Gutschrift bekommen deine Kund:innen einen Betrag zurückerstattet. Dies kann beispielsweise nach einer xref:auftraege:order-type-return.adoc#[Retoure] der Fall sein. Bei der Gutschrift in plentymarkets handelt es sich also nicht um eine Art umgekehrte Rechnung, sondern um eine Rückzahlung. Gutschriftaufträge erzeugst du unter *Aufträge » Aufträge (Testphase)* aus einem Auftrag. Eine Gutschrift ist also immer einem Auftrag zugeordnet. Die in einem Gutschriftauftrag erzeugten Gutschriftbelege werden auch in Buchhaltungsexporten, wie dem *DATEV*-Export, berücksichtigt.
+//gibt es den DATEV-Export noch?
+
+[#saving-standard-status]
+== Standardstatus für Gutschriften speichern
+
+Bevor du eine Gutschrift anlegst, prüfe den xref:auftraege:preparatory-settings.adoc#intable-default-status-credit-note[Standard-Status für Gutschriften] im Menü *Einrichtung » Aufträge » Einstellungen*. Passe den Standardstatus bei Bedarf an und speichere die Einstellungen.
+
+[#create-credit-note]
+== Gutschrift anlegen
+
+Eine Gutschrift ist immer mit einem bestehenden Auftrag in deinem plentymarkets System verknüpft. Deshalb musst du den gewünschten Auftrag zunächst in der Auftragsübersicht öffnen, bevor du eine Gutschrift anlegen kannst.
+
+[TIP]
+.Gutschriften im Hauptauftrag oder im Retourenauftrag anlegen
+====
+Hat eine Kund:in den Auftrag bereits gezahlt, beispielsweise per Vorkasse, und entscheidet sich vor dem Warenausgang gegen den Kauf, empfehlen wir, den Auftrag zu stornieren und direkt im Hauptauftrag eine Gutschrift über alle Auftragspositionen anzulegen.
+
+Kommt es nach erfolgter Zahlung, Warenausgang und Zustellung der Ware für eine oder alle Auftragspositionen zu einer xref:auftraege:order-type-return.adoc#[Retoure] oder im Folgenden zu einem xref:auftraege:order-type-repair.adoc#[Reparaturauftrag], lege die Gutschrift direkt im entsprechenden Retouren- oder Reparaturauftrag an.
+====
+
+:ordertype: Gutschriften
+
+[.instruction]
+Gutschriftauftrag anlegen:
+
+. Öffne das Menü *Aufträge » Aufträge (Testphase)*.
+. Suche (material:search[]) den Auftrag, zu dem du eine Gutschrift anlegen möchtest.
+. Öffne den Auftrag.
+. Klicke oben auf *Aufträge erstellen* (material:shopping_cart[]).
+. Wähle eine Option. Beachte dazu die Erläuterungen in <<table-create-{ordertype}>>.
+. *Speichere* (material:save[]) die Einstellungen. +
+→ Der Gutschriftauftrag wird angelegt.
+
+include::partial$create-order-type.adoc[]
+
+// auf neue UI anpassen
+Wenn bereits ein Gutschriftauftrag zu einem Auftrag angelegt wurde, wird im Tab *Übersicht* des Haupfauftrags rechts der Hinweis *Gutschrift verfügbar* angezeigt. Zusätzlich kannst du bereits angelegte Gutschriftaufträge im Tab *Übersicht* des Hauptauftrags über die Dropdown-Liste *Gutschrift / suchen* aufrufen.
+
+[#530]
+== Gutschriftbeleg erstellen
+
+Nach dem Anlegen des Gutschriftauftrags muss ein Gutschriftbeleg direkt im Gutschriftauftrag erstellt werden. Vor dem ersten Erzeugen eines xref:auftraege:gutschriften-erzeugen.adoc#[Gutschriftbelegs], muss die Dokumentenvorlage im Menü *Einrichtung » Mandant » [Mandant wählen] » Standorte » [Standort wählen] » Dokumente » Gutschrift* eingerichtet werden.
+
+// Tab Belege anpassen auf neue UI?
+Bevor du den Gutschriftbeleg im Tab *Belege* des Gutschriftauftrags erzeugst, solltest du die im Gutschriftauftrag enthaltenen Auftragspositionen prüfen und bei Bedarf ändern.
+
+// auf neue UI anpassen
+[.instruction]
+Gutschriftbeleg erstellen:
+
+. Öffne den Gutschriftauftrag, für den ein Gutschriftbeleg erzeugt werden soll.
+. Wähle die Option *Gutschrift* aus der Dropdown-Liste unter *Beleg / erstellen*.
+. Klicke auf *Beleg erstellen*. +
+→ Der Gutschriftbeleg wird erzeugt und in einem eigenen Tab geöffnet.
+
+Erstellte Gutschriften weisen jeweils eine Referenz zu der Rechnung des dazugehörigen Auftrages auf. Im Tab *Dokumente* eines Auftrags wird dies in der Benennung der Gutschrift angezeigt.
+
+[#540]
+== Gutschriftbeleg korrigieren und stornieren
+
+Einen Gutschriftauftrag und den dazugehörigen Gutschriftbeleg korrigierst du, indem du zunächst einen *Stornobeleg Gutschrift* erzeugst. Danach ist der Gutschriftauftrag auch wieder entsperrt. Denn nach dem Erstellen eines Gutschriftbelegs ist der Gutschriftauftrag selbst für die Bearbeitung gesperrt, damit steuerrelevante Daten nicht verändert werden können. Anschließend kann der Gutschriftauftrag wieder bearbeitet werden. Du kannst die Daten korrigieren und einen neuen Gutschriftbeleg erstellen.
+
+Vor dem ersten Erzeugen des Dokuments muss im Menü *Einrichtung » Mandant » [Mandant wählen] » Standorte » [Standort wählen] » Dokumente » Stornobeleg Gutschrift* zunächst die xref:auftraege:auftragsdokumente.adoc#300[Vorlage] für das Dokument *Stornobeleg Gutschrift* eingerichtet werden.
+
+[IMPORTANT]
+.Stornieren eines Gutschriftbelegs
+====
+Das Stornieren eines Gutschriftbelegs dient der nachvollziehbaren Korrektur von steuerrelevanten Daten und *nicht* der Stornierung eines Gutschriftauftrags selbst.
+====
+
+Gehe zur Korrektur eines Gutschriftauftrags und der Erstellung eines *Stornobelegs Gutschrift* wie im Folgenden beschrieben vor.
+
+// auf neue UI anpassen
+[.instruction]
+Gutschriftauftrag korrigieren:
+
+. Öffne das Menü *Aufträge » Aufträge bearbeiten*.
+. Öffne den Auftrag, in dem du den Gutschriftbeleg stornieren möchtest.
+. Wechsle in das Tab *Belege*.
+. Wähle aus der Dropdown-Liste *Beleg erstellen* den *Stornobeleg*. +
+→ Ein Fenster mit optionalen Einstellungen öffnet sich.
+. *Speichere* (material:save[]) die Einstellungen. +
+→ Der Stornobeleg wird erzeugt und die Auftragseinstellungen des Gutschriftauftrags entsperrt.
+. Bearbeite die Daten, die du korrigieren möchtest.
+. Wechsle wieder in das Tab *Belege*.
+. Wähle aus der Dropdown-Liste *Beleg erstellen* das Dokument *Gutschrift*. +
+→ Ein Fenster mit optionalen Einstellungen öffnet sich.
+. *Speichere* (material:save[]) die Einstellungen. +
+→ Die Gutschrift wird erzeugt und die Auftragseinstellungen des Gutschriftauftrags erneut gesperrt.
+
+// auf neue UI anpassen
+[#550]
+== Rückzahlungen buchen
+
+Nachdem du einen Gutschriftbeleg erstellt hast, muss die Rückzahlung des gutgeschriebenen Betrags in deinem plentymarkets System gebucht werden. Rückzahlungen über bestimmte Zahlungsarten, die du in deinem System eingerichtet hast, buchst du direkt im Tab *Einstellungen* des Gutschriftauftrags. Die Option *Rückzahlung an Kunden* wird nur bei den Zahlungsarten *PayPal*, *ClickandBuy* und *heidelpay* angezeigt.
+
+[IMPORTANT]
+.Bedingung bei PayPal
+====
+Bei *PayPal* ist es nicht möglich, höhere Beträge einzugeben als mit der ursprünglichen Paypal-Transaktion bezahlt wurden.
+====
+
+// auf neue UI anpassen
+[.instruction]
+Rückzahlung im Tab *Einstellungen* buchen:
+
+. Öffne das Menü *Aufträge » Aufträge bearbeiten*.
+. Öffne den Gutschriftauftrag, für den du eine Rückzahlung buchen möchtest.
+. Öffne das Tab *Einstellungen*.
+. Klicke bei der Option *Rückzahlung* auf das *Zahlungs-Icon*.
+. Prüfe den *Betrag* der Rückzahlung und passe diesen falls nötig an.
+. Klicke auf das *Zahnrad* (material:settings[]), um die Rückzahlung zu buchen. +
+→ Die Rückzahlung wird gebucht.
+
+Alternativ ist es auch möglich, die Rückzahlung im Tab *Zahlung* des Gutschriftauftrags zu buchen. Im Tab *Zahlung* siehst du alle Zahlungen und Teilzahlungen, die zum Auftrag gehören. Das Rückbuchen der Zahlung in diesem Tab ist vor allem notwendig, wenn die Zahlung für den Hauptauftrag nicht über eine in plentymarkets integrierte Zahlungsart getätigt wurde.
+
+// auf neue UI anpassen
+[.instruction]
+Rückzahlung im Tab *Zahlung* buchen:
+
+. Öffne das Menü *Aufträge » Aufträge bearbeiten*.
+. Öffne den Gutschriftauftrag, für den du eine Rückzahlung buchen möchtest.
+. Öffne das Tab *Zahlung*.
+. Klicke auf das Icon *Zahlung buchen*.
+. Gib den *Betrag* (Soll) sowie falls nötig eine *Währung* und einen *Verwendungszweck* ein.
+. Klicke auf *Zahlung buchen*. +
+→ Die Rückzahlung wird gebucht und wird im Tab *Zahlung* angezeigt.
+
+// anpassen
+[#560]
+== Warenbestand zurückbuchen
+
+Wenn der Warenausgang bereits gebucht wurde und die Waren beispielsweise im Rahmen einer xref:auftraege:auftraege-verwalten.adoc#400[Retoure] wieder in das Lager zurückgebucht werden sollen, wird dies im Tab *Einstellungen* des Gutschriftauftrags vorgenommen.
+
+[.instruction]
+Warenbestand zurückbuchen:
+
+. Öffne das Menü *Aufträge » Aufträge bearbeiten*.
+. Öffne den Gutschriftauftrag, für den der Warenbestand zurückgebucht werden soll.
+. Wechsle in das Tab *Einstellungen*.
+. Klicke bei der Option *Warenausgang* auf den Link *Warenbestand einbuchen*.
+. Wähle im angezeigten Fenster die gewünschte Option gemäß den Erläuterungen in <<table-settings-reverse-stock>>.
+. Klicke auf *Speichern* (material:save[role="green"]), um den Vorgang auszuführen.
+
+[[table-settings-reverse-stock]]
+.Optionen zur Rückbuchung des Warenbestandes
+[cols="1,3"]
+|====
+|Einstellung |Erläuterung
+
+| *Warenausgang komplett zurücksetzen*
+|Setzt den Warenausgang vollständig zurück. Auch das Datum des Warenausgangs im Hauptauftrag wird gelöscht.
+
+| *Warenbestand zurückbuchen*
+|Bucht die Artikel vollständig oder teilweise zurück. Bei dieser Option wird der Warenausgang *nicht* zurückgesetzt.
+
+| *Komplette Menge wählen*
+|Trägt die komplette Menge des Artikels im Auftrag in das Feld *Rückbuchen* ein.
+
+| *Komplette Menge abwählen*
+|Setzt die Artikelmengen unter *Rückbuchen* auf Null.
+
+| *Rückbuchen*
+|Die Artikelmenge(n) eintragen, die zurückgebucht werden soll(en), wenn Teilmengen zurückgebucht werden sollen.
+
+| *Lager*
+|Das Lager wählen, in das die Artikel zurückgebucht werden sollen.
+
+| *Lagerort*
+|Den Lagerort wählen, in den die Artikel zurückgebucht werden sollen.
+
+| *Menge im Auftrag*
+|Zeigt die Menge der Artikel an, die im Auftrag enthalten sind.
+
+| *Zurückgebucht*
+|Zeigt bereits zurückgebuchte Artikelmengen an.
+
+| *Charge*
+|Zeigt die Chargennummer der Artikel an, die im Auftrag enthalten sind.
+
+| *MHD*
+|Zeigt das Mindesthaltbarkeitsdatum der Artikel an, die im Auftrag enthalten sind.
+
+| *ID*
+|ID des Artikels
+
+| *Artikel*
+|Name des Artikels
+|====
