--- a/docs/de-de/modules/auftraege/pages/order-type-return.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-type-return.adoc
@@ -23,7 +23,7 @@ Retourengründe anlegen:
 . *Speichere* die Einstellungen.
 . Wiederhole dies ggf. für weitere Sprachen.
 
-[#420]
+[#status-returned-items]
 == Status für retournierte Artikel eintragen
 
 Du kannst bis zu 12 Artikelstatus anlegen. Die Status kannst du z.B. nutzen, um einerseits den Zustand der retournierten Artikel, aber auch um den Fortschritt beim Bearbeiten der retournierten Artikel anzugeben. Die Status stehen in einer Retoure im Tab *Übersicht* bei den Auftragspositionen zur Wahl. Um je nach Fortschritt der Bearbeitung verschiedene Status zuzuweisen, lege die benötigten Status an. Du kannst Retourenstatus in mehreren Sprachen hinterlegen.
@@ -37,13 +37,14 @@ Status für retournierte Artikel eintragen:
 . *Speichere* (icon:save[role="green"]) die Einstellungen.
 . Wiederhole dies ggf. für weitere Sprachen.
 
-[#440]
+[#create-and-edit-return]
 == Retoure erfassen und bearbeiten
 
 Eine Retoure erfasst du manuell, wenn ein Paket bei dir eingegangen ist oder du erlaubst deinen registrierten Webshop-Kund:innen, direkt im Kundenkonto des Shops Retouren anzumelden. Nachdem eine Retoure erfasst wurde, werden weitere Bearbeitungsmöglichkeiten sichtbar. So kannst du z.B. den Artikelstatus der retournierten Artikel erst nach dem Erfassen angeben.
 
+[#create-return]
 === Retoure erfassen
-// auf neue UI anpassen
+// auf neue UI anpassen - so korrekt?
 
 [.instruction]
 Gehe folgendermaßen vor, um eine Retoure zu erfassen:
@@ -138,7 +139,7 @@ Wählst du hier einen Grund, hat dieser Grund Priorität gegenüber den einzeln 
 |====
 
 
-[#450]
+[#create-return-label]
 == Rücksendeschein erstellen
 
 Einen Rücksendeschein kannst du deinen Kund:innen bei Zustellung der Ware im Paket beilegen. In diesem Fall sollte der Rücksendeschein Blankofelder für die Retourengründe enthalten. Du kannst deinen Kund:innen aber auch erlauben den Rücksendeschein im *Mein Konto* Bereich auszufüllen, auszudrucken und der Retoure beizulegen.
@@ -167,9 +168,9 @@ Rücksendeschein manuell erstellen:
 Richte eine Ereignisaktion ein, die den Rücksendeschein automatisch generiert. Wenn du hier als Ereignis *Neue Retoure (durch Kunden)* einstellst und nach der Herkunft Webshop filterst, kannst du ausgefüllte Rücksendescheine generieren und musst diese dann lediglich noch zum Download für Kund:innen bereitstellen.
 ====
 
-[#460]
+[#book-back-items]
 == Warenbestand zurückbuchen
-// auf neue UI anpassen
+// auf neue UI anpassen; heißt jetzt "Waren zurückbuchen"?
 
 Wenn du einen Artikel über eine Retoure zurück erhältst, kannst du den Warenbestand ganz oder teilweise zurückbuchen oder auch den gesamten Warenausgang zurücksetzen.
 
