--- a/docs/en-gb/modules/item/pages/item-search.adoc
+++ b/docs/en-gb/modules/item/pages/item-search.adoc
@@ -5,7 +5,7 @@
 :author: team-item
 
 ////
-zuletzt bearbeitet 01.07.2022
+zuletzt bearbeitet 08.08.2022
 ////
 
 //ToDo - once the UI texts are updated, check to make sure the UI texts match the texts in the manual page
@@ -272,6 +272,73 @@ The search results display products that are linked to this attribute value.
 
 *_How do I navigate through the tree structure?_*:
 Click on icon:chevron-right[role="darkGrey"] to open an attribute and see its attribute values.
+
+| *Net stock*
+|
+Enter a number and select an operator from the drop-down list on the left.
+
+[cols="1s,4a"]
+!===
+
+! Is equal to (=)
+!
+The search results only return products with _this exact_ net stock level.
+
+! Less than (<)
+!
+The search results only return products whose net stock is less than the value entered.
+
+! Less than or equal to (\<=)
+!
+The search results only return products whose net stock is less than or equal to the value entered.
+
+! Greater than (>)
+!
+The search results only return products whose net stock is greater than the value entered.
+
+! Greater than or equal to (>=)
+!
+The search results only return products whose net stock is greater than or equal to the value entered.
+!===
+
+//xref:item:directory.adoc#30[Further information about a product's net stock].
+
+| *Physical stock*
+|
+
+Enter a number and select an operator from the drop-down list on the left.
+
+[cols="1s,4a"]
+!===
+
+! Is equal to (=)
+!
+The search results only return products with _this exact_ physical stock level.
+
+! Less than (<)
+!
+The search results only return products whose physical stock is less than the value entered.
+
+! Less than or equal to (\<=)
+!
+The search results only return products whose physical stock is less than or equal to the value entered.
+
+! Greater than (>)
+!
+The search results only return products whose physical stock is greater than the value entered.
+
+! Greater than or equal to (>=)
+!
+The search results only return products whose physical stock is greater than or equal to the value entered.
+!===
+
+//xref:item:directory.adoc#30[Further information about a product's physical stock].
+
+| *Has warehouse settings*
+|
+Select one or more warehouses from the drop-down list (icon:check-square[role="blue"]).
+The search results only return products that are linked to one of these warehouses.
+//The search results only return products that are xref:item:directory.adoc#310[linked to one of these warehouses].
 
 |====
 
