--- a/docs/en-gb/modules/crm/pages/managing-contacts.adoc
+++ b/docs/en-gb/modules/crm/pages/managing-contacts.adoc
@@ -515,7 +515,7 @@ For further information about linking a contact to a company at a later point in
 
 In the *Filter* view, you can search for contacts according to specific criteria. The contacts found are listed in the *Overview* view. The overview currently displays the following information: ID, guest, actions (icon:bars[]), company, rating, first name, last name, email address, telephone number, customer class, number of orders, postcode and country. How you edit contact data records is described in the xref:crm:managing-contacts.adoc#300[Editing a contact] chapter.
 
-You can also use the quick search to display all data that is saved for a contact including addresses, orders, notes and tickets. How to proceed is described on the xref:crm:quick-search.adoc#[Quick search] page in the xref:crm:quick-search.adoc##search-data-record[Searching for a data record] chapter.
+You can also use the quick search to display all data that is saved for a contact including addresses, orders, notes and tickets. How to proceed is described on the xref:crm:quick-search.adoc#[Quick search] page in the xref:crm:quick-search.adoc#search-data-record[Searching for a data record] chapter.
 
 [TIP]
 .Sending emails directly from the overview
