hide raw data info from DE key figure pages

--- a/docs/de-de/modules/business-entscheidungen/pages/auftraege.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/auftraege.adoc
@@ -1,5 +1,5 @@
 = Aufträge
-:keywords: Aufträge, Auftragsanzahl, Menge Aufträge, Auftragsmenge, Business Intelligence, Statistik, Statistiken, Kennzahl, Kennzahlen, Dashboard, Rohdaten, Report, Reports, KPI, KPIs, Key Performance Indicator
+:keywords: Aufträge, Auftragsanzahl, Menge Aufträge, Auftragsmenge, Business Intelligence, Statistik, Statistiken, Kennzahl, Kennzahlen, Dashboard
 :id: D2IR751
 :author: team-order-core, team-bi
 
@@ -12,6 +12,8 @@ _∑ Aufträge = Auftragsanzahl_ +
 Wähle zusätzlich eine xref:business-entscheidungen:auftraege.adoc#100[Dimension] um festzulegen, wie das Ergebnis aufgeschlüsselt werden soll.
 Setze außerdem xref:business-entscheidungen:auftraege.adoc#200[Filter] um zu konkretisieren, nach welchen Kriterien die Aufträge berechnet werden sollen.
 Beachte, dass die Aufträge gezählt werden, die du im Filter *Auftragstyp* definierst. Setzt du diesen Filter nicht, werden alle Auftragstypen genommen.
+
+////
 
 [#300]
 == Benötigte Rohdaten
@@ -31,6 +33,8 @@ include::partial$orderproperties.adoc[]
 include::partial$itemvariations.adoc[]
 
 include::partial$plentyBI-rohdaten-aktivieren.adoc[]
+
+////
 
 [#400]
 == plentyBI Edition
