--- a/docs/de-de/modules/business-entscheidungen/pages/durchschnittlicher-bestellwert.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/durchschnittlicher-bestellwert.adoc
@@ -1,5 +1,5 @@
 = Durchschnittlicher Bestellwert
-:keywords: Bestellwert, Durchschnittswert, durchschnittlicher Bestellwert, Business Intelligence, Statistik, Statistiken, Kennzahl, Kennzahlen, Dashboard, Rohdaten, Report, Reports, KPI, KPIs, Key Performance Indicator
+:keywords: Bestellwert, Durchschnittswert, durchschnittlicher Bestellwert, Business Intelligence, Statistik, Statistiken, Kennzahl, Kennzahlen
 :id: CPZCUGB
 :author: team-order-core, team-bi
 
@@ -13,6 +13,8 @@ _(Menge × Preis) : Auftragsanzahl = ø Bestellwert_ +
 Wähle zusätzlich eine xref:business-entscheidungen:durchschnittlicher-bestellwert.adoc#100[Dimension] um festzulegen, wie das Ergebnis aufgeschlüsselt werden soll.
 Setze außerdem xref:business-entscheidungen:durchschnittlicher-bestellwert.adoc#200[Filter] um zu konkretisieren, nach welchen Kriterien der durchschnittliche Bestellwert berechnet werden soll.
 Beachte hier vor allem den Filter *Auftragstyp*.
+
+////
 
 [#300]
 == Benötigte Rohdaten
@@ -32,6 +34,8 @@ include::partial$orderproperties.adoc[]
 include::partial$itemvariations.adoc[]
 
 include::partial$plentyBI-rohdaten-aktivieren.adoc[]
+
+////
 
 [#400]
 == plentyBI Edition
