--- a/docs/de-de/modules/business-entscheidungen/pages/retourenquote.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/retourenquote.adoc
@@ -1,5 +1,5 @@
 = Retourenquote
-:keywords: Retourenquote, Retourenumsatz, Umsatz Retoure, Retourenquote Umsatz, Retourenanzahl, Business Intelligence, Statistik, Statistiken, Kennzahl, Kennzahlen, Dashboard, Rohdaten, Report, Reports, KPI, KPIs, Key Performance Indicator
+:keywords: Retourenquote, Retourenumsatz, Umsatz Retoure, Retourenquote Umsatz, Retourenanzahl, Business Intelligence, Statistik, Statistiken, Kennzahl, Kennzahlen, Dashboard
 :id: O7KBCB0
 :author: team-order-core, team-bi
 
@@ -19,6 +19,8 @@ Setze außerdem xref:business-entscheidungen:retourenquote.adoc#300[Filter] um z
 Möchtest du die reine Retourenquote errechnen lassen? Dann muss beim Erstellen der Kennzahl zwingend nach dem Auftragstyp *Retoure* gefiltert werden. Aufgrund der oben beschriebenen Formel fließen sonst auch Gutschriften mit in die Berechnung ein, sodass falsche Ergebnisse entstehen.
 ====
 
+////
+
 [#400]
 == Benötigte Rohdaten
 
@@ -37,6 +39,8 @@ include::partial$orderproperties.adoc[]
 include::partial$itemvariations.adoc[]
 
 include::partial$plentyBI-rohdaten-aktivieren.adoc[]
+
+////
 
 [#500]
 == plentyBI Edition
