--- a/docs/de-de/modules/business-entscheidungen/pages/umsatzsteuer-gesamt.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/umsatzsteuer-gesamt.adoc
@@ -1,5 +1,5 @@
 = Umsatzsteuer gesamt
-:keywords: Umsatzsteuer, Umsatzsteuer gesamt, Umsatzsteuerbetrag, Gesamtbetrag, Umsatzsteuergesamtbetrag, Steuerbetrag, Business Intelligence, Statistik, Statistiken, Kennzahl, Kennzahlen, Dashboard, Rohdaten, Report, Reports, KPI, KPIs, Key Performance Indicator
+:keywords: Umsatzsteuer, Umsatzsteuer gesamt, Umsatzsteuerbetrag, Gesamtbetrag, Umsatzsteuergesamtbetrag, Steuerbetrag, Business Intelligence, Statistik, Statistiken, Kennzahl, Kennzahlen, Dashboard
 :id: W464CF4
 :author: team-order-core, team-bi
 
@@ -13,6 +13,8 @@ _(Bruttopreis - Nettopreis) = Steuerbetrag_ +
 _∑ Steuerbetrag = Umsatzsteuer gesamt_ +
 Wähle zusätzlich eine xref:business-entscheidungen:umsatzsteuer-gesamt.adoc#100[Dimension] um festzulegen, wie das Ergebnis aufgeschlüsselt werden soll.
 Setze außerdem xref:business-entscheidungen:umsatzsteuer-gesamt.adoc#200[Filter] um zu konkretisieren, nach welchen Kriterien die Umsatzsteuer gesamt berechnet werden soll.
+
+////
 
 [#400]
 == Benötigte Rohdaten
@@ -32,6 +34,8 @@ include::partial$orderproperties.adoc[]
 include::partial$itemvariations.adoc[]
 
 include::partial$plentyBI-rohdaten-aktivieren.adoc[]
+
+////
 
 [#500]
 == plentyBI Edition
