--- a/docs/de-de/modules/business-entscheidungen/pages/versandumsatz.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/versandumsatz.adoc
@@ -1,5 +1,5 @@
 = Versandumsatz
-:keywords: Versandumsatz, Brutto-Versandumsatz, Netto-Versandumsatz, Brutto-Versand, Netzto-Versand, Versandkosten, Versandkosten gesamt, Business Intelligence, Statistik, Statistiken, Kennzahl, Kennzahlen, Dashboard, Rohdaten, Report, Reports, KPI, KPIs, Key Performance Indicator
+:keywords: Versandumsatz, Brutto-Versandumsatz, Netto-Versandumsatz, Brutto-Versand, Netzto-Versand, Versandkosten, Versandkosten gesamt, Business Intelligence, Statistik, Statistiken, Kennzahl, Kennzahlen, Dashboard
 :id: HDE116B
 :author: team-order-core, team-bi
 
@@ -13,6 +13,8 @@ Du entscheidest im Bereich xref:business-entscheidungen:versandumsatz.adoc#100[B
 So kannst entweder den Brutto-Versandumsatz mit Umsatzsteuer oder den Netto-Versandumsatz ohne Umsatzsteuer anzeigen lassen.
 Wähle zusätzlich eine xref:business-entscheidungen:versandumsatz.adoc#100[Dimension] um festzulegen, wie das Ergebnis aufgeschlüsselt werden soll.
 Setze außerdem xref:business-entscheidungen:versandumsatz.adoc#200[Filter] um zu konkretisieren, nach welchen Kriterien der Versandumsatz berechnet werden soll.
+
+////
 
 [#400]
 == Benötigte Rohdaten
@@ -32,6 +34,8 @@ include::partial$orderproperties.adoc[]
 include::partial$itemvariations.adoc[]
 
 include::partial$plentyBI-rohdaten-aktivieren.adoc[]
+
+////
 
 [#500]
 == plentyBI Edition
