--- a/docs/de-de/modules/business-entscheidungen/pages/durchschnittliche-anzahl-auftragspositionen.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/durchschnittliche-anzahl-auftragspositionen.adoc
@@ -1,5 +1,5 @@
 = Durchschnittliche Anzahl der Auftragspositionen
-:keywords: Durchschnitt, Anzahl Auftragspositionen, Menge Auftragspositionen, Auftragspositionsmenge, Auftragspositionsanzahl, Business Intelligence, Statistik, Statistiken, Kennzahl, Kennzahlen, Dashboard, Rohdaten, Report, Reports, KPI, KPIs, Key Performance Indicator
+:keywords: Durchschnitt, Anzahl Auftragspositionen, Menge Auftragspositionen, Auftragspositionsmenge, Auftragspositionsanzahl, Business Intelligence, Statistik, Statistiken, Kennzahl, Kennzahlen, Dashboard
 :id: E5VUVYW
 :author: team-order-core, team-bi
 
@@ -12,6 +12,8 @@ Dieses Ergebnis wird dann durch die Anzahl der Aufträge geteilt: +
 _(∑ Auftragspositionen) : Auftragsanzahl = ø Anzahl der Auftragspositionen_ +
 Wähle zusätzlich eine xref:business-entscheidungen:durchschnittliche-anzahl-auftragspositionen.adoc#100[Dimension] um festzulegen, wie das Ergebnis aufgeschlüsselt werden soll.
 Setze außerdem xref:business-entscheidungen:durchschnittliche-anzahl-auftragspositionen.adoc#200[Filter] um zu konkretisieren, nach welchen Kriterien die durchschnittliche Anzahl der Auftragspositionen berechnet werden soll.
+
+////
 
 [#300]
 == Benötigte Rohdaten
@@ -31,6 +33,8 @@ include::partial$orderproperties.adoc[]
 include::partial$itemvariations.adoc[]
 
 include::partial$plentyBI-rohdaten-aktivieren.adoc[]
+
+////
 
 [#400]
 == plentyBI Edition
