--- a/docs/de-de/modules/business-entscheidungen/pages/live-auftraege.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/live-auftraege.adoc
@@ -1,5 +1,5 @@
 = Aufträge (Live)
-:keywords: Aufträge, Auftragsanzahl, Aufträge in Echtzeit, Auftragsstatus, Anzahl Aufträge, eingegangene Aufträge, Business Intelligence, Statistik, Statistiken, Kennzahl, Kennzahlen, Dashboard, Rohdaten, Report, Reports, KPI, KPIs, Key Performance Indicator
+:keywords: Aufträge, Auftragsanzahl, Aufträge in Echtzeit, Auftragsstatus, Anzahl Aufträge, eingegangene Aufträge, Business Intelligence, Statistik, Statistiken, Kennzahl, Kennzahlen, Dashboard
 :page-aliases: auftraege-live.adoc
 :id: DXR4I10
 :author: team-order-core, team-bi
