--- a/docs/de-de/modules/business-entscheidungen/pages/umsatz.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/umsatz.adoc
@@ -1,5 +1,5 @@
 = Umsatz
-:keywords: Umsatz, Brutto-Umsatz, Netto-Umsatz, Business Intelligence, Statistik, Statistiken, Kennzahl, Kennzahlen, Dashboard, Rohdaten, Report, Reports, KPI, KPIs, Key Performance Indicator
+:keywords: Umsatz, Brutto-Umsatz, Netto-Umsatz, Business Intelligence, Statistik, Statistiken, Kennzahl, Kennzahlen, Dashboard
 :id: 3EDOK8V
 :author: team-order-core, team-bi
 
@@ -14,6 +14,8 @@ Du entscheidest im Bereich xref:business-entscheidungen:umsatz.adoc#100[Berechnu
 So kannst du entweder den Brutto-Umsatz oder den Netto-Umsatz anzeigen lassen.
 Wähle zusätzlich eine xref:business-entscheidungen:umsatz.adoc#200[Dimension] um festzulegen, wie das Ergebnis aufgeschlüsselt werden soll.
 Setze außerdem xref:business-entscheidungen:umsatz.adoc#300[Filter] um zu konkretisieren, nach welchen Kriterien der Umsatz berechnet werden soll.
+
+////
 
 [#400]
 == Benötigte Rohdaten
@@ -33,6 +35,8 @@ include::partial$orderproperties.adoc[]
 include::partial$itemvariations.adoc[]
 
 include::partial$plentyBI-rohdaten-aktivieren.adoc[]
+
+////
 
 [#500]
 == plentyBI Edition
