hide raw data content from EN key figure pages

--- a/docs/en-gb/modules/business-decisions/pages/average-order-value.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/average-order-value.adoc
@@ -1,5 +1,5 @@
 = Average order value
-:keywords: average, average order value, order value, orders, quantity of orders, Business Intelligence, BI, statistics, key figure, key figures, Dashboard, raw data, report, reports, KPI, KPIs, Key Performance Indicator
+:keywords: average, average order value, order value, orders, quantity of orders, Business Intelligence, BI, statistics, key figure, key figures, Dashboard
 :id: CPZCUGB
 :author: team-order-core, team-bi
 
@@ -13,6 +13,8 @@ _(Quantity × Price) : Quantity of orders = ø Order value_ +
 In addition, select a xref:business-decisions:average-order-value.adoc#100[dimension] to determine how the result is grouped.
 Set xref:business-decisions:average-order-value.adoc#200[filters] to specify the criteria for the calculation of the average order value.
 Make sure to be aware of the information given for the filter *Order type*.
+
+////
 
 [#300]
 == Required raw data
@@ -32,6 +34,8 @@ include::partial$orderproperties.adoc[]
 include::partial$itemvariations.adoc[]
 
 include::partial$plentyBI-activate-raw-data.adoc[]
+
+////
 
 [#400]
 == plentyBI edition
