--- a/docs/en-gb/modules/business-decisions/pages/average-number-of-order-items.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/average-number-of-order-items.adoc
@@ -1,5 +1,5 @@
 = Average number of order items
-:keywords: order items, quantity sold, average, average number of order items, Business Intelligence, BI, statistics, key figure, key figures, Dashboard, raw data, report, reports, KPI, KPIs, Key Performance Indicator
+:keywords: order items, quantity sold, average, average number of order items, Business Intelligence, BI, statistics, key figure, key figures, Dashboard
 :id: E5VUVYW
 :author: team-order-core, team-bi
 
@@ -12,6 +12,8 @@ This result is then divided by the total number of orders: +
 _(∑ Order items) : Order quantity = ø Number of order items_ +
 In addition, select a xref:business-decisions:average-number-of-order-items.adoc#100[dimension] to determine how the result is grouped.
 Set xref:business-decisions:average-number-of-order-items.adoc#200[filters] to specify the criteria for the calculation of the average number of order items.
+
+////
 
 [#300]
 == Required raw data
@@ -31,6 +33,8 @@ include::partial$orderproperties.adoc[]
 include::partial$itemvariations.adoc[]
 
 include::partial$plentyBI-activate-raw-data.adoc[]
+
+////
 
 [#400]
 == plentyBI edition
