--- a/docs/en-gb/modules/business-decisions/pages/live-orders.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/live-orders.adoc
@@ -1,5 +1,5 @@
 = Orders (Live)
-:keywords: live orders, realtime, real time, orders, number of orders, quantity, quantity of orders, Business Intelligence, BI, statistics, key figure, key figures, Dashboard, raw data, report, reports, KPI, KPIs, Key Performance Indicator
+:keywords: live orders, realtime, real time, orders, number of orders, quantity, quantity of orders, Business Intelligence, BI, statistics, key figure, key figures, Dashboard
 :page-aliases: orders-live.adoc
 :id: DXR4I10
 :author: team-order-core, team-bi
