--- a/docs/en-gb/modules/business-decisions/pages/orders-key-figure.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/orders-key-figure.adoc
@@ -1,5 +1,5 @@
 = Orders
-:keywords: orders, number of orders, quantity, quantity of orders, Business Intelligence, BI, statistics, key figure, key figures, Dashboard, raw data, report, reports, KPI, KPIs, Key Performance Indicator
+:keywords: orders, number of orders, quantity, quantity of orders, Business Intelligence, BI, statistics, key figure, key figures, Dashboard
 :id: D2IR751
 :author: team-order-core, team-bi
 
@@ -12,6 +12,8 @@ _∑ Orders = Number of orders_ +
 In addition, select a xref:business-decisions:orders-key-figure.adoc#100[dimension] to determine how the result is grouped.
 Set xref:business-decisions:orders-key-figure.adoc#200[filters] to specify the criteria for the calculation of the sales volume.
 Note that those orders are counted that you define in the filter *Order type*. If you don't set this filter, all orders of all order types are counted.
+
+////
 
 [#300]
 == Required raw data
@@ -31,6 +33,8 @@ include::partial$orderproperties.adoc[]
 include::partial$itemvariations.adoc[]
 
 include::partial$plentyBI-activate-raw-data.adoc[]
+
+////
 
 [#400]
 == plentyBI edition
