--- a/docs/en-gb/modules/business-decisions/pages/return-rate.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/return-rate.adoc
@@ -1,5 +1,5 @@
 = Return rate
-:keywords: Return rate, returns, return rate amount, quantity of returns, number of returns, Business Intelligence, BI, statistics, key figure, key figures, Dashboard, raw data, report, reports, KPI, KPIs, Key Performance Indicator
+:keywords: Return rate, returns, return rate amount, quantity of returns, number of returns, Business Intelligence, BI, statistics, key figure, key figures, Dashboard
 :id: O7KBCB0
 :author: team-order-core, team-bi
 
@@ -19,6 +19,8 @@ Set xref:business-decisions:return-rate.adoc#300[filters] to specify the criteri
 Do you want to use this key figure to calculate the precise return rate? Then it is mandatory to set the filter for the order type *Return* when creating the key figure. If this is not done, credit notes will be considered for the calculation as outlined in the formula above. This leads to inaccurate results.
 ====
 
+////
+
 [#400]
 == Required raw data
 
@@ -37,6 +39,8 @@ include::partial$orderproperties.adoc[]
 include::partial$itemvariations.adoc[]
 
 include::partial$plentyBI-activate-raw-data.adoc[]
+
+////
 
 [#500]
 == plentyBI edition
