--- a/docs/en-gb/modules/business-decisions/pages/sales-volume.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/sales-volume.adoc
@@ -1,5 +1,5 @@
 = Sales volume
-:keywords: sales volume, sales, quantity, quantities, quantities sold, numbers, numbers sold, gross sales volume, net sales volume, gross sales, net sales, Business Intelligence, BI, statistics, key figure, key figures, Dashboard, raw data, report, reports, KPI, KPIs, Key Performance Indicator
+:keywords: sales volume, sales, quantity, quantities, quantities sold, numbers, numbers sold, gross sales volume, net sales volume, gross sales, net sales, Business Intelligence, BI, statistics, key figure, key figures, Dashboard
 :id: MSSWL41
 :author: team-order-core
 
@@ -12,6 +12,8 @@ _∑ Order items = Sales volume_ +
 By choosing a xref:business-decisions:sales-volume.adoc#100[calculation type], you decide whether to calculate with gross sales volume or the net sales volume.
 In addition, select a xref:business-decisions:sales-volume.adoc#200[dimension] to determine how the result is grouped.
 Set xref:business-decisions:sales-volume.adoc#300[filters] to specify the criteria for the calculation of the sales volume.
+
+////
 
 [#400]
 == Required raw data
@@ -31,6 +33,8 @@ include::partial$orderproperties.adoc[]
 include::partial$itemvariations.adoc[]
 
 include::partial$plentyBI-activate-raw-data.adoc[]
+
+////
 
 [#500]
 == plentyBI edition
