adjust contacts page DE + EN

--- a/docs/de-de/modules/business-entscheidungen/pages/kontakte.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/kontakte.adoc
@@ -7,6 +7,8 @@ Diese Seite erläutert die Dimensionen und Filter, die dir für die Kennzahl *Ko
 
 plentymarkets berechnet die Kennzahl *Kontakte* nach den <<#200, Dimensionen>> *Erstellungsdatum* und *Land*. Wähle zusätzlich <<#300, Filter>>, um zu konkretisieren, nach welchen Kriterien die Kontakte gefiltert werden sollen.
 
+////
+
 [#400]
 == Benötigte Rohdaten
 
@@ -19,8 +21,10 @@ include::partial$kennzahlen-voraussetzungen-rohdaten.adoc[]
 
 include::partial$plentyBI-rohdaten-aktivieren.adoc[]
 
+////
+
 [#500]
-== Edition
+== plentyBI ‚Edition
 
 include::partial$kennzahlen-voraussetzungen-edition.adoc[]
 
