--- a/docs/en-gb/modules/business-decisions/pages/contacts.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/contacts.adoc
@@ -7,6 +7,8 @@ This page explains the dimensions and filters available to you for the key figur
 
 plentymarkets calculates the key figure *Contacts* based on the <<#200, dimensions>> *Creation date* and *Country*. In addition, select <<#300, filters>> to specify the criteria for filtering the contacts.
 
+////
+
 [#400]
 == Required raw data
 
@@ -19,8 +21,10 @@ include::partial$key-figure-requirement-raw-data.adoc[]
 
 include::partial$plentyBI-activate-raw-data.adoc[]
 
+////
+
 [#500]
-== Edition
+== plentyBI edition
 
 include::partial$key-figure-requirement-edition.adoc[]
 
