Denise/hide raw data (#939)
* hide raw data info from DE key figure pages

* hide raw data content from EN key figure pages

* add info for reports DE

* add translation

* adjust contacts page DE + EN

--- a/docs/de-de/modules/business-entscheidungen/pages/absatz.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/absatz.adoc
@@ -1,5 +1,5 @@
 = Absatz
-:keywords: Absatz, Stückzahl, Mengen, Business Intelligence, Statistik, Statistiken, Kennzahl, Kennzahlen, Dashboard, Rohdaten, Report, Reports, KPI, KPIs, Key Performance Indicator
+:keywords: Absatz, Stückzahl, Mengen, Business Intelligence, Statistik, Statistiken, Kennzahl, Kennzahlen, Dashboard
 :id: MSSWL41
 :author: team-order-core
 
@@ -12,6 +12,8 @@ _∑ Auftragspositionen = Absatz_ +
 Du entscheidest im Bereich xref:business-entscheidungen:absatz.adoc#100[Berechnung], ob der Brutto-Absatz oder der Netto-Absatz berechnet wird.
 Wähle zusätzlich eine xref:business-entscheidungen:absatz.adoc#200[Dimension] um festzulegen, wie das Ergebnis aufgeschlüsselt werden soll.
 Setze außerdem xref:business-entscheidungen:absatz.adoc#300[Filter] um zu konkretisieren, nach welchen Kriterien der Absatz berechnet werden soll.
+
+////
 
 [#400]
 == Benötigte Rohdaten
@@ -31,6 +33,8 @@ include::partial$orderproperties.adoc[]
 include::partial$itemvariations.adoc[]
 
 include::partial$plentyBI-rohdaten-aktivieren.adoc[]
+
+////
 
 [#500]
 == plentyBI Edition
